--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,9 +41,14 @@ header {
     padding: 1rem;
 }
 
-.logo {
-    height: 50px;
-    width: auto;
+.profile-picture {
+  width: 120px; /* Largura da imagem */
+  height: 120px; /* Altura da imagem */
+  border-radius: 50%; /* Torna a imagem redonda */
+  object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
+  border: 4px solid #fff; /* Borda branca ao redor da imagem */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  margin-bottom: 15px; /* Margem inferior */
 }
  
 header h1 {
